fix background alignment

--- a/For Backbone/styles.css
+++ b/For Backbone/styles.css
@@ -3,14 +3,16 @@ it changes the size, style, color of the display */
 
 .grid {
     display: flex;
-    width: 1010px;
+    width: 1100px;
     height: 1010px;
     flex-wrap: wrap;
+    border-spacing: 0;
+    margin-left: -20px;
 }
 
 .square {
-    width: 200px;
-    height: 200px;
+    width: 210px;
+    height: 170px;
     border: solid rgb(223, 25, 25) 1px;
     cursor:url('../For Graphics/Hammer Asset/hammer.cur'), auto; /* added a hammer image from graphics when you hover over the grid in the wack-a-mole game. */
 
@@ -27,10 +29,10 @@ it changes the size, style, color of the display */
 
 /* background image of game page*/
 #gamePage {
-    background-image:url("../For Graphics/Background Asset/Background.png");      /* body and background, can add pic url from graphic team.*/
+    background-image:url("../For Graphics/Background Asset/Game\ Background.png");      /* body and background, can add pic url from graphic team.*/
     background-repeat: no-repeat; 
-    background-position: center;
-    background-size: 100%;
+    background-position: 0 -10px;
+    background-size: 100% 100%;
     background-attachment: scroll;
 }
 
@@ -42,6 +44,7 @@ body {
     padding: 0;
     margin: 0;
     text-align: center;      
+    /* overflow: hidden; */
 }
 
 /* start button*/
